# agent-context-substrate

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml  spec.md
docs/: AGENT_PORTABILITY_NOTES.md  OPERATIONS.md  PIPELINE.md  RELEASE_CHECKLIST.md  USER_GUIDE.en.md  USER_GUIDE.md  WINDOWS_CODEX_APP_SETUP.ko.md  WINDOWS_CODEX_APP_SETUP.md
docs/plans/: 2026-04-23-hermes-agent-integration-plan.md  2026-04-27-distribution-hardening-final-plan.md  2026-05-12-maintenance-refactoring-plan.md
scripts/: setup-codex-windows.ps1
src/agent_context_substrate/: __init__.py  agent_llm_router.py  artifact_pipeline.py  atoms.py  cli.py  codex_hook.py  codex_integration.py  codex_setup.py  codex_source.py  codex_wiki_root.py  config.py  context_packet.py  distribution.py  evidence.py  heuristic_composition.py  heuristic_extraction.py  heuristic_metadata.py  heuristic_recovery.py  integration.py  lint.py  models.py  naming.py  packet_builder.py  paths.py  policy.py  promotion.py  promotions.py  raw_extract.py  recovery.py  retrieval.py  retrieval_graph.py  retrieval_ids.py  retrieval_packets.py  retrieval_proposals.py  retrieval_recovery.py  retrieval_scoring.py  retrieval_sources.py  retrieval_types.py  safe_paths.py  semantic_lint.py  (+13 more)
src/agent_context_substrate/assets/codex_plugin/agent-context-substrate/.codex-plugin/: plugin.json
src/agent_context_substrate/assets/codex_plugin/agent-context-substrate/hooks/: codex_stop_finalize.py  hooks.json
src/agent_context_substrate/assets/codex_plugin/agent-context-substrate/skills/agent-context-substrate/: SKILL.md
src/agent_context_substrate/assets/context_engine/agent_context_substrate/: __init__.py  config.py  engine.py  formatting.py  plugin.yaml  recovery_loader.py  retrieval_tools.py
src/agent_context_substrate/assets/user_plugin/agent_context_substrate/: __init__.py  config.py  plugin.yaml  runtime.py
src/agent_context_substrate/commands/: __init__.py  artifacts.py  build_context_packet.py  codex.py  codex_setup.py  distribution.py  legacy_promotions.py  lint_wiki.py  wiki_patches.py
src/hermes_llm_wiki_harness/: cli.py  context_packet.py  distribution.py  integration.py  ledger.py  models.py  retrieval.py  session_store.py  summarizer.py
src/hermes_llm_wiki_harness/assets/context_engine/wiki_harness/: __init__.py  config.py  engine.py  plugin.yaml  recovery_loader.py  retrieval_tools.py
src/hermes_llm_wiki_harness/assets/user_plugin/wiki_harness/: __init__.py  config.py  plugin.yaml  runtime.py
tests/: test_agent_llm_router.py  test_agent_llm_summarizer_backend.py  test_artifact_pipeline.py  test_atoms.py  test_build_context_packet_command.py  test_cli.py  test_codex_cli.py  test_codex_hook.py  test_codex_integration.py  test_codex_setup.py  test_codex_source.py  test_context_engine_recovery_loader.py  test_context_engine_retrieval_tools.py  test_context_packet.py  test_distribution.py  test_distribution_assets.py  test_evidence_bundle.py  test_fresh_install_smoke.py  test_hermes_auxiliary_router_smoke.py  test_heuristic_extraction.py  test_integration.py  test_ledger.py  test_legacy_promotions_command.py  test_lint.py  test_models.py  test_packet_builder.py  test_paths.py  test_promotion.py  test_promotions.py  test_raw_extract.py  test_recovery.py  test_retrieval.py  test_retrieval_graph.py  test_retrieval_ids.py  test_retrieval_packets.py  test_retrieval_proposals.py  test_retrieval_recovery.py  test_retrieval_scoring.py  test_retrieval_sources.py  test_retrieval_types.py  (+15 more)
