[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-llm-wiki-harness"
version = "0.1.0"
description = "Hermes-specific layered context recovery harness backed by session exports and an Obsidian wiki."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "주완 이 + Hermes Agent" }
]
keywords = ["hermes-agent", "obsidian", "context", "rag", "wiki"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
hermes-llm-wiki-harness = "hermes_llm_wiki_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
hermes_llm_wiki_harness = ["assets/**/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
