[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-substrate"
version = "0.2.0"
description = "A multi-layer context and retrieval substrate for AI agents; currently packaged with Hermes Agent integration."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "주완 이 + Hermes Agent" }
]
keywords = ["ai-agent", "context", "memory", "rag", "obsidian", "hermes-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
agent-context-substrate = "agent_context_substrate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agent_context_substrate = ["assets/**/*"]

[tool.setuptools.exclude-package-data]
agent_context_substrate = ["assets/**/__pycache__/*", "assets/**/*.pyc"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
