[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-substrate"
version = "0.2.0"
description = "A local context and retrieval substrate for AI-agent sessions, packaged with Hermes Agent and Codex integrations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "주완 이 + Hermes Agent" }
]
keywords = ["ai-agent", "context", "memory", "rag", "obsidian", "hermes-agent", "codex"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "ruff>=0.8.0",
]

[project.scripts]
agent-context-substrate = "agent_context_substrate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agent_context_substrate = [
  "assets/**/*",
  "assets/codex_plugin/agent-context-substrate/.codex-plugin/plugin.json",
]

[tool.setuptools.exclude-package-data]
agent_context_substrate = ["assets/**/__pycache__/*", "assets/**/*.pyc"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"src/agent_context_substrate/assets/user_plugin/agent_context_substrate/runtime.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires local Hermes Agent checkout/venv",
]
